	Dune 2000:
		Added the Atreides grenadier from the 1.06 patch.
		Added randomized tiles for Sand and Rock terrain.
		Shroud is now displayed by default again (disable it in the lobby settings).
		Removed the build radius restrictions.
		Added the BLOXXMAS terrain tiles from the 1.06 patch.
		Saboteur can now plant C4 on vehicles.
		Added concrete plates and building weathering.
	Red Alert:
		Engineers are now remapped to team colors.
		Added some remap to the bottom edge of SAM sites.
		Chinook rotors now counter-rotate.
		Transports will now open their doors when at shore.
		Tanya can now plant C4 on bridges.
		Submarine torpedoes can now hit bridges when force fired.
		Increased torpedo splash damage and raised multiplier vs. concrete.
		Fixed transparency glitches in the sniper icon.
		Removed health bars and selection boxes from walls.
		Renamed Flak Truck to Mobile Flak.
		Increased the shroud reveal range of Mobile Flak from 4 to 6.
		Increased the turret rotation speed of Mobile Flak from 5 to 10.
		Increased the hitpoints of Mobile Flak from 120 to 150.
		Fixed Tanya being unavailable after using the Chronosphere on a vehicle she is in.
		Tanya can now plant C4 on vehicles.
		Parachute bomb air strike will reveal the whole target area.
		Adjusted AA Guns to fire their guns alternately at a high fire rate, and added contrails to their bullets.
		Decreased AA Gun ZSU-23 damage from 25 to 12.
		Increased SAM Site power cost from -20 to -40.
		Decreased SAM Site Nike damage from 100 to 50.
		Increased Radar Dome cost from 1600 to 1800.
		Added a snow variation of the Allied Barracks by Kilkakon.
		Added a desert variation of the Allied Barracks by Kilkakon.
		Added a desert variation of the Missile Silo by Kilkakon.
		Removed the temperate shellmap and improved the design and performance of the desert shellmap.
		Removed the hardcoded missions. These will be later reimplemented.