@@ -159,6 +159,9 @@
 		CrushClasses: wall
 	LineBuild:
 		Range: 8
+		NodeTypes: wall
+	LineBuildNode:
+		Types: wall
 	SelectionDecorations:
 	Selectable:
 		Priority: 1
